# the-grid

./: .gitignore  Cargo.toml  Launch-DevPowerShell-BuildTools.ps1  NODE-AND-PREREQUISITES-CHECKLIST.md  PREREQUISITES-AND-PATHS.md  README.md  build-zode.ps1  remove-zode-data.ps1
crates/grid-core/: Cargo.toml
crates/grid-core/src/: cbor.rs  cid.rs  error.rs  field_schema.rs  lib.rs  program_descriptor.rs  program_id.rs  program_topic.rs  sector_id.rs  sector_protocol.rs  util.rs
crates/grid-core/tests/: roundtrip.rs
crates/grid-crypto/: Cargo.toml
crates/grid-crypto/src/: derive.rs  encrypt.rs  error.rs  lib.rs  padding.rs  poseidon.rs  sector_key.rs  tests.rs  wrap.rs
crates/grid-net/: Cargo.toml
crates/grid-net/src/: addr.rs  behaviour.rs  builder.rs  config.rs  error.rs  event.rs  lib.rs  service.rs
crates/grid-net/tests/: connectivity.rs
crates/grid-programs/interlink/: Cargo.toml
crates/grid-programs/interlink/src/: interlink.rs  lib.rs  tests.rs
crates/grid-programs/zephyr/: Cargo.toml
crates/grid-programs/zephyr/src/: descriptors.rs  lib.rs  messages.rs  tests.rs  types.rs
crates/grid-programs/zfs/: Cargo.toml
crates/grid-programs/zid/: Cargo.toml
crates/grid-programs/zid/src/: lib.rs  tests.rs  zid.rs
crates/grid-proof/: Cargo.toml
crates/grid-proof-groth16/: Cargo.toml
crates/grid-proof-groth16/src/: circuit.rs  error.rs  lib.rs  prover.rs  setup.rs  verifier.rs
crates/grid-proof/src/: error.rs  lib.rs  noop.rs  verifier.rs
crates/grid-relayd/: Cargo.toml
crates/grid-relayd/src/: main.rs
crates/grid-rpc/src/: dispatch.rs  lib.rs  server.rs
crates/grid-sdk/: Cargo.toml
crates/grid-sdk/src/: client.rs  error.rs  helpers.rs  identity.rs  lib.rs  sector.rs
crates/grid-service/src/: context.rs  lib.rs  registry.rs  service.rs
crates/grid-services/identity/src/: identity.rs
crates/grid-services/interlink/src/: interlink_service.rs
crates/grid-services/zephyr/: Cargo.toml
crates/grid-services/zephyr/src/: committee.rs  config.rs  epoch.rs  gossip.rs  lib.rs  mempool.rs  publishing.rs  routing.rs  service.rs  shared_mempool.rs
crates/grid-services/zephyr/src/consensus/: engine.rs  leader.rs  mod.rs  proposal.rs  vote.rs
crates/grid-services/zephyr/src/proof/: circuit.rs  mod.rs  prover.rs  verifier.rs
crates/grid-services/zephyr/src/storage/: mod.rs
crates/grid-services/zephyr/tests/: mvp_criteria.rs
crates/grid-storage/: Cargo.toml
crates/grid-storage/src/: config.rs  error.rs  lib.rs  rocks.rs  sector_rocks.rs  sector_traits.rs  tests.rs
crates/programs/interlink/: Cargo.toml
crates/programs/interlink/src/: interlink.rs  tests.rs
crates/programs/zfs/: Cargo.toml
crates/programs/zid/: Cargo.toml
crates/programs/zid/src/: tests.rs  zid.rs
crates/zephyr-orchestrator-bin/src/: app.rs  helpers.rs  node_manager.rs  render_blockflow.rs  render_dashboard.rs  render_launch.rs  render_log.rs  state.rs  traffic_gen.rs
crates/zero-neural/: Cargo.toml
crates/zero-neural/src/: derivation.rs  did.rs  encapsulation.rs  error.rs  lib.rs  machine_key.rs  neural_key.rs  signing.rs
crates/zero-neural/tests/: integration.rs
crates/zfs-core/: Cargo.toml
crates/zfs-core/src/: cbor.rs  cid.rs  error.rs  head.rs  key_envelope.rs  lib.rs  program_descriptor.rs  program_id.rs  protocol.rs  serde_helpers.rs
crates/zfs-core/tests/: roundtrip.rs
crates/zfs-crypto/: Cargo.toml
crates/zfs-crypto/src/: error.rs  lib.rs  tests.rs  wrap.rs
crates/zfs-net/: Cargo.toml
crates/zfs-net/src/: behaviour.rs  config.rs  event.rs  lib.rs  protocol.rs  service.rs
crates/zfs-net/tests/: connectivity.rs
crates/zfs-programs/: Cargo.toml
crates/zfs-programs/src/: lib.rs  tests.rs  topic.rs  zchat.rs  zid.rs
crates/zfs-proof/: Cargo.toml
crates/zfs-proof/src/: lib.rs  noop.rs  verifier.rs
crates/zfs-sdk/: Cargo.toml
crates/zfs-sdk/src/: client.rs  error.rs  helpers.rs  identity.rs  lib.rs  sector.rs  upload.rs
crates/zfs-storage/: Cargo.toml
crates/zfs-storage/src/: config.rs  error.rs  lib.rs  rocks.rs  tests.rs  traits.rs
crates/zfs-zode/: Cargo.toml
crates/zfs-zode-app/: Cargo.toml
crates/zfs-zode-app/src/: app.rs  chat.rs  components.rs  helpers.rs  main.rs  render.rs  render_storage.rs  settings.rs  state.rs  visualization.rs
crates/zfs-zode-cli/: Cargo.toml
crates/zfs-zode-cli/src/: app.rs  main.rs  ui.rs
crates/zfs-zode/src/: config.rs  error.rs  gossip.rs  handler.rs  handler_tests.rs  lib.rs  metrics.rs  sector_handler.rs  types.rs  zode.rs
crates/zode/: Cargo.toml
crates/zode-app/: Cargo.toml  build.rs
crates/zode-app/src/: app.rs  chat.rs  components.rs  identity.rs  interlink.rs  main.rs  render.rs  render_storage.rs  settings.rs  state.rs  vault.rs  visualization.rs  visualization_render.rs
crates/zode-bin/: Cargo.toml
crates/zode-bin/src/: app.rs  components.rs  helpers.rs  identity.rs  interlink.rs  main.rs  profile.rs  render.rs  render_detail.rs  render_programs.rs  render_services.rs  render_storage.rs  settings.rs  setup.rs  state.rs  vault.rs  visualization.rs  visualization_render.rs
crates/zode-bin/src/components/: buttons.rs  data_display.rs  feedback.rs  inputs.rs  labels.rs  layout.rs  mod.rs
crates/zode-cli/: Cargo.toml
crates/zode-cli/src/: app.rs  main.rs  ui.rs
crates/zode/src/: config.rs  error.rs  gossip.rs  lib.rs  metrics.rs  sector_handler.rs  types.rs  zode.rs
deploy/aws/relay/: 00-env.example  04-build-relay.sh  05-deploy-service.sh  06-verify.sh  README.md  lib.sh
docs/: grid-protocol.md  run-a-relay.md  run-a-zode.md
docs/spec/v0.1.0/: 00-overview.md  01-architecture.md  02-storage.md  03-programs-and-topics.md  04-proof.md  05-standard-programs.md  06-zode.md  07-zode-cli.md  07-zode-ui.md  08-zode-app.md  08-zode-bin.md  09-sdk.md  10-crypto.md  11-core-types.md  12-protocol.md  13-mailbox-protocol.md  13-sector-requirements.md  14-dht-discovery.md  15-network-visualization.md  16-sector-append-protocol.md
docs/whitepaper/: generate-whitepaper.py  grid-protocol-whitepaper-v0.5.0.html  grid-protocol-whitepaper.html
(+3 files in other folders)
