[workspace]
resolver = "2"
members = [
  "crates/zero-neural",
  "crates/grid-core",
  "crates/grid-crypto",
  "crates/grid-storage",
  "crates/grid-proof",
  "crates/grid-proof-groth16",
  "crates/grid-net",
  "crates/zode",
  "crates/grid-sdk",
  "crates/zode-cli",
  "crates/zode-app",
  "crates/grid-programs/zid",
  "crates/grid-programs/interlink",
  "crates/grid-programs/zfs",
]
