[workspace]
resolver = "2"
members = [
  "crates/grid-core",
  "crates/grid-crypto",
  "crates/grid-storage",
  "crates/grid-proof",
  "crates/grid-proof-groth16",
  "crates/grid-net",
  "crates/zode",
  "crates/grid-rpc",
  "crates/grid-sdk",
  "crates/zode-cli",
  "crates/zode-bin",
  "crates/grid-relayd",
  "crates/grid-programs/zid",
  "crates/grid-programs/interlink",
  "crates/grid-programs/zfs",
]
