[package]
name = "grid-crypto"
version = "0.2.0"
edition = "2021"
description = "Grid client-side encryption: Poseidon sponge sector encryption and hybrid key wrapping"
license = "MIT OR Apache-2.0"

[dependencies]
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
zero-neural = { path = "../zero-neural" }
grid-core = { path = "../grid-core" }
ark-ff = "0.5"
ark-bn254 = "0.5"
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge"] }

[dev-dependencies]
rand = "0.8"
zero-neural = { path = "../zero-neural", features = ["testkit"] }
