[package]
name = "grid-net"
version = "0.2.0"
edition = "2021"
description = "Grid libp2p network abstraction: QUIC transport, GossipSub topics, request-response protocol"
license = "MIT OR Apache-2.0"

[dependencies]
grid-core = { path = "../grid-core" }
libp2p = { version = "0.56", features = [
    "tokio",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "request-response",
    "cbor",
    "kad",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
