[package]
name = "grid-proof-groth16"
version = "0.2.0"
edition = "2021"
description = "Groth16 shape+encrypt circuit, prover, verifier, and trusted setup for the Grid"
license = "MIT OR Apache-2.0"

[dependencies]
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge", "r1cs"] }
ark-snark = "0.5"
ark-std = "0.5"
grid-core = { path = "../grid-core" }
grid-proof = { path = "../grid-proof" }
grid-crypto = { path = "../grid-crypto" }
rand = "0.8"
thiserror = "2"
