[package]
name = "grid-storage"
version = "0.2.0"
edition = "2021"
description = "Grid storage abstraction over RocksDB with BlockStore, HeadStore, and ProgramIndex"
license = "MIT OR Apache-2.0"

[dependencies]
rocksdb = "0.22"
grid-core = { path = "../grid-core" }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
