[package]
name = "zfs-crypto"
version = "0.1.0"
edition = "2021"
description = "ZFS client-side encryption: XChaCha20-Poly1305 sector encryption and hybrid key wrapping"
license = "MIT OR Apache-2.0"

[dependencies]
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
zero-neural = { path = "../zero-neural" }
zfs-core = { path = "../zfs-core" }

[dev-dependencies]
rand = "0.8"
