[package]
name = "zfs-programs"
version = "0.1.0"
edition = "2021"
description = "ZFS program identity, topic naming, and standard programs (ZID, Z Chat)"
license = "MIT OR Apache-2.0"

[dependencies]
zfs-core = { path = "../zfs-core" }
sha2 = "0.10"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
