[package]
name = "zfs-sdk"
version = "0.1.0"
edition = "2021"
description = "ZFS client SDK — identity, encrypt, sign, upload, fetch"

[dependencies]
zero-neural = { path = "../zero-neural" }
zfs-core = { path = "../zfs-core" }
zfs-crypto = { path = "../zfs-crypto" }
zfs-net = { path = "../zfs-net" }
programs-zid = { path = "../programs/zid" }
programs-interlink = { path = "../programs/interlink" }
zfs-proof = { path = "../zfs-proof" }
zfs-proof-groth16 = { path = "../zfs-proof-groth16" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
thiserror = "2"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
