[package]
name = "zfs-storage"
version = "0.1.0"
edition = "2021"
description = "ZFS storage abstraction over RocksDB with BlockStore, HeadStore, and ProgramIndex"
license = "MIT OR Apache-2.0"

[dependencies]
rocksdb = "0.22"
zfs-core = { path = "../zfs-core" }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
