[package]
name = "zfs-zode-app"
version = "0.1.0"
edition = "2021"
description = "ZFS Zode App — standalone desktop GUI for the Zode"

[[bin]]
name = "zode-app"
path = "src/main.rs"

[dependencies]
zfs-core = { path = "../zfs-core" }
zfs-zode = { path = "../zfs-zode" }
zfs-storage = { path = "../zfs-storage" }
zfs-programs = { path = "../zfs-programs" }
zfs-net = { path = "../zfs-net" }
zfs-crypto = { path = "../zfs-crypto" }
zero-neural = { path = "../zero-neural" }
eframe = "0.30"
egui-phosphor = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hkdf = "0.12"
sha2 = "0.10"
