[package]
name = "zfs-zode"
version = "0.1.0"
edition = "2021"
description = "ZFS Zode — ties together storage, network, proof, and programs"

[dependencies]
zfs-core = { path = "../zfs-core" }
zfs-crypto = { path = "../zfs-crypto" }
zfs-storage = { path = "../zfs-storage" }
zfs-net = { path = "../zfs-net" }
zfs-proof = { path = "../zfs-proof" }
zfs-programs = { path = "../zfs-programs" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
zero-neural = { path = "../zero-neural" }
