[package]
name = "zode-app"
version = "0.2.0"
edition = "2021"
description = "Zode App — standalone desktop GUI for the Zode"

[[bin]]
name = "zode-app"
path = "src/main.rs"

[dependencies]
grid-core = { path = "../grid-core" }
zode = { path = "../zode" }
grid-storage = { path = "../grid-storage" }
programs-zid = { path = "../programs/zid" }
programs-interlink = { path = "../programs/interlink" }
grid-net = { path = "../grid-net" }
grid-crypto = { path = "../grid-crypto" }
grid-sdk = { path = "../grid-sdk" }
grid-proof-groth16 = { path = "../grid-proof-groth16" }
zero-neural = { path = "../zero-neural", features = ["testkit"] }
rand = "0.8"
eframe = "0.30"
egui_extras = { version = "0.30", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
egui-phosphor = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hex = "0.4"
hkdf = "0.12"
sha2 = "0.10"
ciborium = "0.2"
