[package]
name = "zode-bin"
version = "0.2.0"
edition = "2021"
description = "ZODE App — standalone desktop GUI for the ZODE"

[[bin]]
name = "zode-bin"
path = "src/main.rs"

[dependencies]
grid-core = { path = "../grid-core" }
grid-service = { path = "../grid-service" }
zode = { path = "../zode" }
grid-storage = { path = "../grid-storage" }
grid-programs-zid = { path = "../grid-programs/zid" }
grid-programs-interlink = { path = "../grid-programs/interlink" }
grid-net = { path = "../grid-net" }
grid-crypto = { path = "../grid-crypto" }
grid-sdk = { path = "../grid-sdk" }
grid-proof-groth16 = { path = "../grid-proof-groth16" }
zid = { path = "../../../zid", features = ["testkit"] }
rand = "0.8"
eframe = "0.33"
egui_extras = { version = "0.33", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
egui-phosphor = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hex = "0.4"
hkdf = "0.12"
sha2 = "0.10"
ciborium = "0.2"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
