[package]
name = "zode-cli"
version = "0.2.0"
edition = "2021"
description = "Zode CLI/TUI — console interface for the Zode"

[[bin]]
name = "zode-cli"
path = "src/main.rs"

[dependencies]
grid-core = { path = "../grid-core" }
zode = { path = "../zode" }
grid-storage = { path = "../grid-storage" }
programs-zid = { path = "../programs/zid" }
programs-interlink = { path = "../programs/interlink" }
grid-net = { path = "../grid-net" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
