[package]
name = "grid-services-zephyr"
version = "0.2.0"
edition = "2021"
description = "Zephyr Service — note-based currency with rotating committees and zone-scoped consensus"
license = "MIT OR Apache-2.0"

[dependencies]
grid-core = { path = "../../grid-core" }
grid-service = { path = "../../grid-service" }
grid-programs-zephyr = { path = "../../grid-programs/zephyr" }
async-trait = "0.1"
axum = "0.8"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
