[package]
name = "programs-interlink"
version = "0.1.0"
edition = "2021"
description = "Interlink (chat) program descriptor and messages"
license = "MIT OR Apache-2.0"

[dependencies]
zfs-core = { path = "../../zfs-core" }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
programs-zid = { path = "../zid" }
